# python-testing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
Rest API examples/: README.md  main.py
Rest API examples/01-fastapi-app-routers/: README.md
Rest API examples/02-pydantic-schemas/: README.md
Rest API examples/03-service-methods/: README.md  service_example.py
Rest API examples/04-database-models-repositories/: README.md
Rest API examples/05-dependency-injection/: README.md  dependency_injection_example.py
Rest API examples/06-error-handling/: README.md  error_handling_example.py
Rest API examples/07-auth-permissions/: README.md  auth_permissions_example.py
Rest API examples/08-tests/: README.md
Rest API examples/09-observability-deployment/: README.md
docs/: testing-standards.md
rest_api_examples/: README.md
rest_api_examples/01-fastapi-app-routers/: README.md  fastapi_example.py
rest_api_examples/02-pydantic-schemas/: README.md  pydantic_example.py
rest_api_examples/03-service-methods/: README.md
rest_api_examples/04-database-models-repositories/: README.md  database_example.py
rest_api_examples/05-dependency-injection/: README.md
rest_api_examples/06-error-handling/: README.md
rest_api_examples/07-auth-permissions/: README.md
rest_api_examples/08-tests/: README.md  tests_example.py
tests/: conftest.py  test_di_errors_auth_observability.py  test_fastapi_app_routers.py  test_launcher.py  test_pydantic_schemas.py  test_service_and_database_layers.py
(+2 files in other folders)
