[project]
name = "python-testing-repo"
version = "0.1.0"
description = "Personal Python testing and backend reference repository."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "uvicorn>=0.42.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.16.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests_*.py",
]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]
